--- a/sample/index.html
+++ b/sample/index.html
@@ -6,8 +6,8 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
 		/>
-		<title>タブに出る表示</title>
-		<meta name="keywords" content="WAV, wav, 卓展, 卓, 卓展2021" />
+		<title>齋藤小薫ポートフォリオサイト</title>
+		<meta name="keywords" content="齋藤小薫、作品集、ポートフォリオ" />
 		<meta name="description" content="どんなサイトなのかの説明" />
 		<link rel="stylesheet" href="css/normalize.css" />
 		<link rel="stylesheet" href="css/main.css" />
