--- a/sample/index.html
+++ b/sample/index.html
@@ -15,7 +15,49 @@
 
 	<body>
 		<header></header>
-		<main></main>
+		<main>
+			<section id="Works">
+				<h1 class="mixed">WORKS</h1>
+				<p>graphic programming movie</p>
+				<div class="grid">
+					<div class="grid-item black-box">
+						<img class="imgs" src="images/card-08.jpg" alt="植物園">
+						<p class="card-txt">東山植物園サイン計画<br/>Signplan</p>
+					</div>
+					<div class="grid-item black-box">
+						<img class="imgs" src="images/card-04.jpg" alt="りきゅう">
+						<p class="card-txt">東京下町もんじゃ屋りきゅう津島店<br/>Advertisement</p>
+					</div>
+					<div class="grid-item black-box">
+						<img class="imgs" src="images/card-06.jpg" alt="薫り">
+						<p class="card-txt">薫りと和みを持ち運ぶ<br/>Textile / Goods</p>
+					</div>
+					<div class="grid-item black-box">
+						<img class="imgs" src="images/card-07.jpg" alt="茶">
+						<p class="card-txt">ティータイム<br/>Textile</p>
+					</div>
+					<div class="grid-item black-box">
+						<img class="imgs" src="images/card-05.jpg" alt="カルーセル">
+						<p class="card-txt">株式会社アドウェイズ バーチャルインターンシップ<br/>Advertisement</p>
+					</div>
+					<div class="grid-item black-box">
+						<img class="imgs" src="images/card-09.jpg" alt="猫">
+						<p class="card-txt">猫の日常<br/>Programming</p>
+					</div>
+					<div class="grid-item black-box">
+						<img class="imgs" src="images/card-10.jpg" alt="ハサミ">
+						<p class="card-txt">対戦型はさみ将棋<br/>Programming</p>
+					</div>
+					<div class="grid-item black-box">
+						<img class="imgs" src="images/card-11.jpg" alt="本">
+						<p class="card-txt">Monster Story<br/>Motioncapture</p>
+					</div>
+				</div>
+			</section>
+			<section id="About">
+				<h1 class="mixed">ABOUT</h1>
+			</section>
+		</main>
 		<footer></footer>
 	</body>
 </html>
