--- a/sample/bag.html
+++ b/sample/bag.html
@@ -19,46 +19,45 @@
             <section id="top">
                 <div class="black-top">
                     <div class="top-menu">
-                        <p class="mixed txt-top">薫りと和みを持ち運ぶ</p>
-                        <p class="mixed txt-top">Textile / Goods</p>
+                        <p class="mixed txt-top">薫りと和みを持ち運ぶ<br/>&emsp;&emsp; Textile / Goods</p>
+
                     </div>
                     <img class="img-top " src="images/top-16.jpg" alt="カバンのトプ画">
                 </div>
             </section>
 
             <section>
-                <p class="txt">日本に由来のある３つの香りをモチーフに布の選定からデザイン、染め、模様付け、籠の製作まで行った和風の籠バッグです。</p>
-                <p class="txt">2020/7/2-2020/8/20</p>
-                <p class="txt">Illustrator 染め　シルクスクリーン</p>
+                <div class=" pages-section-bottom margins">
+                    <p class="txt-ex">日本に由来のある３つの香りをモチーフに布の選定からデザイン、染め、模様付け、籠の製作まで行った和風の籠バッグです。</p>
+                    <p class="txt">2020/7/2-2020/8/20</p>
+                    <p class="txt">Illustrator 染め　シルクスクリーン</p>
+                </div>
             </section>
 
             <section>
-                <div>
-                    <img class="imags bag-jpg" src="images/bag-15.jpg" alt="檜">
-                    <div>
-                        <h2 class="txt">檜</h2>
-                        <p class="txt">森林を想像させる深い緑色に檜の特徴的な丸い年輪の形とお風呂の水面を連想させる円形の模様のデザインです。薄茶色のカゴとの組み合わせで見た目から森林を感じさせます。</p>
-                    </div>
+                <div class=" pages-section-bottom">
+                    <img class="bag-jpg" src="images/bag-15.jpg" alt="檜">
+                    <h2 class="txt">檜</h2>
+                    <p class="txt bag-work">森林を想像させる深い緑色に檜の特徴的な丸い年輪の形とお風呂の水面を連想させる円形の模様のデザインです。薄茶色のカゴとの組み合わせで見た目から森林を感じさせます。</p>
+                    <img class="bag-jpg" src="images/bag-16.jpg" alt="竜涎香">
+                    <h2 class="txt">竜涎香</h2>
+                    <p class="txt bag-work">上質な竜涎香の色味である琥珀色を背景に海を泳ぐマッコウクジラと竜涎香の歪な形の模様のデザインです。竜涎香はマッコウクジラの腸内でできる塊状の香料です。</p>
+                    <img class="bag-jpg" src="images/bag-17.jpg" alt="金木犀">
+                    <h2 class="txt">金木犀</h2>
+                    <p class="txt bag-work">幾何学的な形の花を前面に出した模様のデザインです。カゴとの組み合わせで金木犀の鮮やかなオレンジ色の花と緑力しい葉を表現しています。</p>
                 </div>
-                <div>
-                    <img class="imags bag-jpg" src="images/bag-16.jpg" alt="竜涎香">
-                    <div>
-                        <h2 class="txt">竜涎香</h2>
-                        <p class="txt">上質な竜涎香の色味である琥珀色を背景に海を泳ぐマッコウクジラと竜涎香の歪な形の模様のデザインです。竜涎香はマッコウクジラの腸内でできる塊状の香料です。</p>
-                    </div>
-                </div>
-                <img class="imags bag-jpg" src="images/bag-17.jpg" alt="金木犀">
-                <h2 class="txt">金木犀</h2>
-                <p class="txt">幾何学的な形の花を前面に出した模様のデザインです。カゴとの組み合わせで金木犀の鮮やかなオレンジ色の花と緑力しい葉を表現しています。</p>
             </section>
 
             <section>
-                <img src="images/bag-18.jpg" alt="染め">
-                <img src="images/bag-19.jpg" alt="シルクスクリーン">
-                <p class="txt">制作では布の染めとシルクスクリーン、カゴの制作、裁縫を行いました。特に頑張ったのは染めです。
-                    深い色味を出すことにこだわりましたが、布が乾いてから色味が薄まってしまうため何度も染め直しを繰り返しました。
-                    和のデザインの深みを出すことを追求した結果本来2〜3枚を単色で染めるのに2〜30分ほどで染終わるところ、この作品の染めには10時間ほどかかりました。
-                    </p>
+                <div class="pages-section-bottom">
+                    <div class="pages-grid">
+                        <img class="pages-grid-item" src="images/bag-18.jpg" alt="染め">
+                        <img class="pages-grid-item" src="images/bag-19.jpg" alt="シルクスクリーン">
+                    </div>
+                    <p class="txt">制作では布の染めとシルクスクリーン、カゴの制作、裁縫を行いました。特に頑張ったのは染めです。
+                        深い色味を出すことにこだわりましたが、布が乾いてから色味が薄まってしまうため何度も染め直しを繰り返しました。
+                        和のデザインの深みを出すことを追求した結果本来2〜3枚を単色で染めるのに2〜30分ほどで染終わるところ、この作品の染めには10時間ほどかかりました。</p>
+                </div>
             </section>
 		</main>
 		<footer></footer>
