--- a/sample/bag.html
+++ b/sample/bag.html
@@ -29,21 +29,21 @@
             <section>
                 <div class=" pages-section-bottom margins">
                     <p class="txt-ex">日本に由来のある３つの香りをモチーフに布の選定からデザイン、染め、模様付け、籠の製作まで行った和風の籠バッグです。</p>
-                    <p class="txt">2020/7/2-2020/8/20</p>
-                    <p class="txt">Illustrator 染め　シルクスクリーン</p>
+                    <p class="txt">◴ 2020/7/2-2020/8/20</p>
+                    <p class="txt">✎ Illustrator 染め　シルクスクリーン</p>
                 </div>
             </section>
 
             <section>
                 <div class=" pages-section-bottom">
                     <img class="bag-jpg" src="images/bag-15.jpg" alt="檜">
-                    <h2 class="txt">檜</h2>
+                    <h2 class="txt-h2">檜</h2>
                     <p class="txt bag-work">森林を想像させる深い緑色に檜の特徴的な丸い年輪の形とお風呂の水面を連想させる円形の模様のデザインです。薄茶色のカゴとの組み合わせで見た目から森林を感じさせます。</p>
                     <img class="bag-jpg" src="images/bag-16.jpg" alt="竜涎香">
-                    <h2 class="txt">竜涎香</h2>
+                    <h2 class="txt-h2">竜涎香</h2>
                     <p class="txt bag-work">上質な竜涎香の色味である琥珀色を背景に海を泳ぐマッコウクジラと竜涎香の歪な形の模様のデザインです。竜涎香はマッコウクジラの腸内でできる塊状の香料です。</p>
                     <img class="bag-jpg" src="images/bag-17.jpg" alt="金木犀">
-                    <h2 class="txt">金木犀</h2>
+                    <h2 class="txt-h2">金木犀</h2>
                     <p class="txt bag-work">幾何学的な形の花を前面に出した模様のデザインです。カゴとの組み合わせで金木犀の鮮やかなオレンジ色の花と緑力しい葉を表現しています。</p>
                 </div>
             </section>
