--- a/sample/bag.html
+++ b/sample/bag.html
@@ -17,48 +17,63 @@
 		<header></header>
 		<main>
             <section id="top">
-                <div class="black-top">
-                    <div class="top-menu">
-                        <p class="mixed txt-top">薫りと和みを持ち運ぶ<br/>&emsp;&emsp; Textile / Goods</p>
+                <div class=" pages-top-bottom margins">
+                    <img class="img" src="images/top-16.jpg" alt="バッグのトプ画">
+                    <p class="txt-ex top-name-center">---Textile/Goods---</p>
+                    <p class="txt-ex top-name-center">和みと薫りを持ち運ぶ</p>
+                    <p class="txt top-name-center">◴ 2020/7/2-2020/8/20&emsp;✎ Illustrator 染め　シルクスクリーン</p>
+                </div>
+
+            <section>
+                <h1 class="mixed mini-box menu topic">&nbsp;PROCESS</h1>
+                <div class=" pages-section-bottom margins">
+                    <div class="txt">
+                        <p class=" p-line">私の名前　齋藤小薫</p>
+
+                        <p class=" p-line">齋藤は平凡だが小薫は珍しい</p>
+
+                        <p class=" p-line">両親が何故この感じを選んだのか、私には不思議だったが今ではとても気に入っている</p>
+
+                        <p class=" p-line">薫…</p>
+
+                        <p class=" p-line">どことなく、包み込んでくれるようなやさしさを感じる</p>
+
+                        <p class=" p-line">日本人（和の人）である私の名前に使われたこの漢字をテーマにものを包む風呂敷のバッグを作った</p>
+
+                        <p class=" p-line">何時間もじっくりと時間をかけて色を付けて、何枚ものスクリーンで模様をつけ、ひと針ずつ縫って形を作る</p>
+
+                        <p class=" p-line">私のような作品</p>
+
 
                     </div>
-                    <img class="img-top " src="images/top-16.jpg" alt="カバンのトプ画">
-                </div>
-            </section>
-
-            <section>
-                <div class=" pages-section-bottom margins">
-                    <p class="txt-ex">日本に由来のある３つの香りをモチーフに布の選定からデザイン、染め、模様付け、籠の製作まで行った和風の籠バッグです。</p>
-                    <p class="txt">◴ 2020/7/2-2020/8/20</p>
-                    <p class="txt">✎ Illustrator 染め　シルクスクリーン</p>
-                </div>
-            </section>
-
-            <section>
-                <div class=" pages-section-bottom">
-                    <img class="bag-jpg" src="images/bag-15.jpg" alt="檜">
-                    <h2 class="txt-h2">檜</h2>
-                    <p class="txt bag-work">森林を想像させる深い緑色に檜の特徴的な丸い年輪の形とお風呂の水面を連想させる円形の模様のデザインです。薄茶色のカゴとの組み合わせで見た目から森林を感じさせます。</p>
-                    <img class="bag-jpg" src="images/bag-16.jpg" alt="竜涎香">
-                    <h2 class="txt-h2">竜涎香</h2>
-                    <p class="txt bag-work">上質な竜涎香の色味である琥珀色を背景に海を泳ぐマッコウクジラと竜涎香の歪な形の模様のデザインです。竜涎香はマッコウクジラの腸内でできる塊状の香料です。</p>
-                    <img class="bag-jpg" src="images/bag-17.jpg" alt="金木犀">
-                    <h2 class="txt-h2">金木犀</h2>
-                    <p class="txt bag-work">幾何学的な形の花を前面に出した模様のデザインです。カゴとの組み合わせで金木犀の鮮やかなオレンジ色の花と緑力しい葉を表現しています。</p>
-                </div>
-            </section>
-
-            <section>
-                <div class="pages-section-bottom">
                     <div class="pages-grid">
                         <img class="pages-grid-item" src="images/bag-18.jpg" alt="染め">
                         <img class="pages-grid-item" src="images/bag-19.jpg" alt="シルクスクリーン">
                     </div>
+                </div>
+
+                <h1 class="mixed mini-box menu topic">&nbsp;WORK</h1>
+                <div class=" pages-section-bottom margins">
+                    <p class="txt pages-h1-bottom">日本に由来のある３つの香りをモチーフに布の選定からデザイン、染め、模様付け、籠の製作まで行った和風の籠バッグ</p>
+                    <img class="bag-jpg" src="images/bag-15.jpg" alt="檜">
+                    <h2 class="txt-h2">檜</h2>
+                    <p class="txt bag-work">森林を想像させる深い緑色に檜の特徴的な丸い年輪の形とお風呂の水面を連想させる円形の模様のデザイン。薄茶色のカゴとの組み合わせで見た目から森林を感じさせる。</p>
+                    <img class="bag-jpg" src="images/bag-16.jpg" alt="竜涎香">
+                    <h2 class="txt-h2">竜涎香</h2>
+                    <p class="txt bag-work">上質な竜涎香の色味である琥珀色を背景に海を泳ぐマッコウクジラと竜涎香の歪な形の模様のデザイン。竜涎香とはマッコウクジラの腸内でできる塊状の香料のことである。</p>
+                    <img class="bag-jpg" src="images/bag-17.jpg" alt="金木犀">
+                    <h2 class="txt-h2">金木犀</h2>
+                    <p class="txt bag-work">幾何学的な形の花を前面に出した模様のデザイン。カゴとの組み合わせで金木犀の鮮やかなオレンジ色の花と緑力しい葉を表現している。</p>
+                </div>
+            </section>
+
+            <!-- <section>
+                <div class="pages-section-bottom">
                     <p class="txt">制作では布の染めとシルクスクリーン、カゴの制作、裁縫を行いました。特に頑張ったのは染めです。
                         深い色味を出すことにこだわりましたが、布が乾いてから色味が薄まってしまうため何度も染め直しを繰り返しました。
                         和のデザインの深みを出すことを追求した結果本来2〜3枚を単色で染めるのに2〜30分ほどで染終わるところ、この作品の染めには10時間ほどかかりました。</p>
                 </div>
-            </section>
+            </section> -->
 		</main>
 		<footer></footer>
 	</body>
