--- a/sample/higashiyama.html
+++ b/sample/higashiyama.html
@@ -17,6 +17,14 @@
 		<header></header>
 		<main>
             <section id="top">
+                <div class=" pages-top-bottom margins">
+                    <img class="img" src="images/top-14.jpg" alt="東山のトプ画">
+                    <p class="txt-ex top-name-center">---Sign plan---</p>
+                    <p class="txt-ex top-name-center">植物のようせいと学ぶ東山植物園</p>
+                    <p class="txt top-name-center">◴ 2021/4/21-2021/6/4&emsp;✎ Illustrator Photoshop AfterEffect</p>
+                </div>
+            </section>
+            <!-- <section id="top">
                 <div class="black-top">
                     <div class="top-menu">
                         <p class="mixed txt-top">東山植物園サイン計画<br/>&emsp;&emsp;&emsp;&emsp;&emsp; Sign plan</p>
@@ -24,86 +32,90 @@
                     </div>
                     <img class="img-top " src="images/top-14.jpg" alt="東山のトプ画">
                 </div>
-            </section>
+            </section> -->
 
-            <section>
+            <!-- <section>
                 <div class=" pages-section-bottom margins">
                     <p class="txt-ex">東山植物園の現状問題を解決するサイン計画です。<br/>【ペアワーク】</p>
                     <p class="txt">◴ 2021/4/21-2021/6/4</p>
                     <p class="txt">✎ Illustrator Photoshop AfterEffect</p>
                 </div>
-            </section>
+            </section> -->
 
             <section>
-                <div class=" pages-section-bottom">
-                    <img class="img pages-h1-bottom" src="images/higashiyama-06.jpg" alt="コンセプト">
-                    <h2 class="txt-h2">東山植物園のユーザー調査</h2>
-                    <p class="txt">植物園のユーザーは平日にはリピーターの高齢者が多いが、晴れた休日には親子連れが多い。
-                        調査によるとこれは動物園に遊びに来たついでに植物園に寄ったり、温室リニューアルをきっかけに散歩しに来た問い人たちでした。</p>
-                    <p class="txt"><span class="higashiyama-marker">新規ユーザーにも植物園の魅力を伝えたい！</span></p>
-                    <p class="txt pages-h1-bottom"><span class="higashiyama-marker">ターゲット→親子連れに決定</span></p>
+                <h1 class="mixed mini-box menu topic">&nbsp;PROCESS</h1>
+                <div class=" pages-section-bottom margins">
+                    <h2 class="txt-h2 p-line">東山植物園のユーザー調査</h2>
+                    <p class="txt p-line">植物園のユーザーは平日にはリピーターの高齢者が多いが、晴れた休日には親子連れが多い。
+                        調査によるとこれは動物園に遊びに来たついでに植物園に寄ったり、温室リニューアルをきっかけに散歩しに来た人たちだった。</p>
+                    <p class="txt p-line"><span class="higashiyama-marker">新規ユーザーにも植物園の魅力を伝えたい！</span></p>
+                    <p class="txt p-line"><span class="higashiyama-marker">ターゲット→親子連れに決定</span></p>
 
+                    <h2 class="txt-h2 p-line pages-h1-top">東山植物園の現状</h2>
+                    <p class="txt p-line">現在の植物園には年齢層高めでかつ植物に詳しいリピーターが多い。
+                        そのため園内のサインは簡素で説明的なデザインであり、植物園にあまり来たことのない人には理解しづらいデザインである。</p>
+                    <p class="txt p-line"><span class="higashiyama-marker">植物園に来たことのない親子連れにもわかりやすく、子供が植物について楽しく学べるデザインにしよう！</span></p>
+                    <img class="img" src="images/higashiyama-07.jpg" alt="現状写真">
+
+                    <h2 class="txt-h2 p-line pages-h1-top">どんな価値を与えたいか</h2>
                     <img class="higashiyama-jpg" src="images/higashiyama-05.jpg" alt="男の子">
-                    <h2 class="txt-h2">どんな価値を与えたいか</h2>
-                    <p class="txt">「動物園のついでに植物園に来た」など軽い気持ちで訪れたユーザーにも植物について面白い知識を知ってもらい、植物を楽しく学んでほしい！</p>
-                    <p class="txt pages-h1-bottom">動物園だけでなく植物園でも家族の楽しい思い出の時間を過ごしてもらいたい！</p>
+                    <p class="txt p-line">「動物園のついでに植物園に来た」など軽い気持ちで訪れたユーザーにも植物について面白い知識を知ってもらい、植物を楽しく学んでほしい！</p>
+                    <p class="txt p-line">動物園だけでなく植物園でも家族の楽しい思い出の時間を過ごしてもらいたい！</p>
 
-                    <h2 class="txt-h2">東山植物園の現状</h2>
-                    <p class="txt">現在の植物園には年齢層高めでかつ植物に詳しいリピーターが多い。
-                        そのため園内のサインは簡素で説明的なデザインであり、植物園にあまり来たことのない人には理解しづらいデザインでした。</p>
-                    <p class="txt"><span class="higashiyama-marker">植物園に来たことのない親子連れにもわかりやすく、子供が植物について楽しく学べるデザインにしよう！</span></p>
-                    <img class="img pages-h1-bottom" src="images/higashiyama-07.jpg" alt="現状写真">
 
-                    <h2 class="txt-h2">アプローチ方法</h2>
-                    <p class="txt">・スマホネイティブ世代の子供に合わせて植物の説明サインやエリアの説明サインをARを使ったインタラクションのあるサインにする</p>
-                    <p class="txt pages-h1-bottom">・ARコンテンツを用いて植物園が子供でも親しみやすくなるように「植物のようせい」というキャラクターを設定する</p>
+                    <img class="img-80" src="images/higashiyama-06.jpg" alt="コンセプト">
+
+                    <h2 class="txt-h2 p-line pages-h1-top">アプローチ方法</h2>
+                    <p class="txt p-line">・スマホネイティブ世代の子供に合わせて植物の説明サインやエリアの説明サインをARを使ったインタラクションのあるサインにする</p>
+                    <p class="txt p-line pages-h1-bottom">・ARコンテンツを用いて植物園が子供でも親しみやすくなるように「植物のようせい」というキャラクターを設定する</p>
 
                     <p class="txt-ex right left higashiyama-box  pages-center">園内マップ、植物の説明サイン、誘導サイン、注意サイン　を作成</p>
                 </div>
             </section>
 
             <section>
-                <div class="pages-section-bottom">
-                    <h1 class="txt-h2">園内マップ</h1>
-                    <h2 class="txt-h2">紙マップ</h2>
-                    <p class="txt">エントランスマップに掲載する情報に加え、エリアの豆知識動画が見れるARマーカーを掲載します。</p>
-                    <div class="pages-grid">
-                        <img class="pages-grid-item" src="images/higashiyama-08.jpg" alt="紙マップ表">
-                        <img class="pages-grid-item pages-h1-bottom" src="images/higashiyama-09.jpg" alt="紙マップ裏">
-                    </div>
-                    <h2 class="txt-h2">マップ内ピクトグラム</h2>
-                    <img class="img pages-h1-bottom" src="images/higashiyama-10.jpg" alt="ピクトグラム">
-                    <h2 class="txt-h2">紙マップARコードから視聴できる動画 &emsp;(ex:シャクナゲエリア)</h2>
+                <h1 class="mixed mini-box menu topic">&nbsp;WORK</h1>
+                <div class=" pages-section-bottom margins">
+                    <h1 class="txt-h2 top-name-center ">---園内マップ---</h1>
+                    <h2 class="txt-h2 s-line">紙マップ</h2>
+                    <p class="txt p-line">エントランスマップに掲載する情報に加え、エリアの豆知識動画が見れるARマーカーを掲載した。
+                    </p>
+                    <img class="img-80" src="images/higashiyama-08.jpg" alt="紙マップ表">
+                    <img class="img-80 pages-h1-bottom" src="images/higashiyama-09.jpg" alt="紙マップ裏">
+
+                    <p class="txt s-line">マップ内ピクトグラム</p>
+                    <img class="img-60 pages-h1-bottom" src="images/higashiyama-10.jpg" alt="ピクトグラム">
+                    <p class="txt s-line">紙マップARコードから視聴できる動画 &emsp;(ex:シャクナゲエリア)</p>
                     <img class="img" src="images/higashiyama-11.jpg" alt="シャクナゲ動画">
                     <div class="pages-right pages-h1-bottom">
                         <a class="txt " href="https://youtu.be/wgxLAjCNrF8">シャクナゲエリアの説明動画</a>
                     </div>
 
-                    <h2 class="txt-h2">エントランスマップ</h2>
-                    <p class="txt">ターゲットに合わせた低い視点の台で紙マップに比べ少なめの短時間で理解しやすい情報量を掲載します。</p>
-                    <img class="img-top right left" src="images/higashiyama-12.jpg" alt="エントランスマップ大きさ">
-                    <img class="img-top right left pages-h1-bottom" src="images/higashiyama-13.jpg" alt="エントランスマップ内容">
+                    <h2 class="txt-h2 s-line">エントランスマップ</h2>
+                    <p class="txt p-line">ターゲットに合わせた低い視点の台で紙マップに比べ少なめの短時間で理解しやすい情報量を掲載した。</p>
+                    <img class="img-80" src="images/higashiyama-12.jpg" alt="エントランスマップ大きさ">
+                    <img class="img-80 higashiyama-work" src="images/higashiyama-13.jpg" alt="エントランスマップ内容">
 
-                    <h1 class="txt-h2">説明サイン</h1>
-                    <p class="txt">スマホネイティブ世代に合わせたARを使ったサインです。植物の妖精が登場し植物の説明をしてくれます。</p>
+                    <h1 class="txt-h2 top-name-center">---説明サイン---</h1>
+                    <p class="txt p-line">スマホネイティブ世代に合わせたARを使ったサイン。植物の妖精が登場し植物の説明をする。</p>
                     <img class="img pages-h1-bottom" src="images/higashiyama-14.jpg" alt="説明AR">
-                    <h2 class="txt-h2">説明サインARコードから視聴できる動画 &emsp;(ex:バニラ)</h2>
+                    <p class="txt s-line">説明サインARコードから視聴できる動画 &emsp;(ex:バニラ)</p>
                     <img class="img" src="images/higashiyama-15.jpg" alt="バニラ動画">
-                    <div class="pages-right pages-h1-bottom">
-                        <a class="txt " href="https://youtu.be/fnGc9bJhJos">バニラの説明動画</a>
+                    <div class="pages-right higashiyama-work">
+                        <a class="txt" href="https://youtu.be/fnGc9bJhJos">バニラの説明動画</a>
                     </div>
 
-                    <h1 class="txt-h2">誘導サイン</h1>
-                    <p class="txt">マップと同じイラストを載せ、位置を確認できるようにしています。
-                        温室は混雑を防ぐため一方通行の誘導サインを用意し、ARで写すと植物の妖精が出てくる隠しコマンド的要素があります。</p>
-                    <div class="pages-grid-none">
+                    <h1 class="txt-h2 top-name-center">---誘導サイン---</h1>
+                    <p class="txt p-line">マップと同じイラストを載せ、位置を確認できるようにする。
+                        温室は混雑を防ぐため一方通行の誘導サインを用意し、ARで写すと植物の妖精が出てくる隠しコマンド的要素がある。</p>
+                    <div class="pages-grid-none higashiyama-work">
                         <img class="pages-grid-item" src="images/higashiyama-16.jpg" alt="誘導">
-                        <img class="pages-grid-item pages-h1-bottom" src="images/higashiyama-17.jpg" alt="温室誘導">
+                        <img class="pages-grid-item" src="images/higashiyama-17.jpg" alt="温室誘導">
                     </div>
 
-                    <h1 class="txt-h2">注意サイン</h1>
-                    <p class="txt">足元の悪い道や立ち入り禁止の場所に設置する看板です。
-                        子供に伝わりやすいコミカルなデザインにしています。</p>
+                    <h1 class="txt-h2 top-name-center">---注意サイン---</h1>
+                    <p class="txt p-line">足元の悪い道や立ち入り禁止の場所に設置する看板。
+                        子供に伝わりやすいコミカルなデザイン。</p>
                     <img class="img" src="images/higashiyama-18.jpg" alt="注意">
                 </div>
             </section>
