--- a/sample/rikyu.html
+++ b/sample/rikyu.html
@@ -17,6 +17,15 @@
 		<header></header>
 		<main>
             <section id="top">
+                <div class=" pages-top-bottom margins">
+                    <img class="img" src="images/top-17.jpg" alt="りきゅうのトプ画">
+                    <p class="txt-ex top-name-center">---Advertisement---</p>
+                    <p class="txt-ex top-name-center">新店舗オープン宣伝広告</p>
+                    <p class="txt top-name-center">◴ 2020/1/28-2020/3/5&emsp;✎ Illustrator</p>
+                </div>
+            </section>
+
+            <!-- <section id="top">
                 <div class="black-top">
                     <div class="top-menu">
                         <p class="mixed txt-top">東京下町もんじゃ屋りきゅう津島店<br/>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; Advertisement</p>
@@ -24,18 +33,20 @@
                     </div>
                     <img class="img-top " src="images/top-17.jpg" alt="りきゅうのトプ画">
                 </div>
-            </section>
+            </section> -->
 
-            <section>
+            <!-- <section>
                 <div class=" pages-section-bottom margins">
-                    <p class="txt-ex">東京下町もんじゃ屋りきゅう津島店の開店をお知らせするチラシ、ショップカード、クーポン券です。<br/>【担当：ショップカード、クーポン券】</p>
+                    <p class="txt-ex"></p>
                     <p class="txt">◴ 2020/1/28-2020/3/5</p>
                     <p class="txt">✎ Illustrator</p>
                 </div>
-            </section>
+            </section> -->
 
             <section>
-                <div class=" pages-section-bottom">
+                <h1 class="mixed mini-box menu topic">&nbsp;WORK</h1>
+                <div class=" pages-section-bottom margins">
+                    <p class="txt p-line higashiyama-work">東京下町もんじゃ屋りきゅう津島店の開店をお知らせするチラシ、ショップカード、クーポン券を制作した。<br/>【担当：ショップカード、クーポン券】</p>
                     <h2 class="txt-h2">チラシ</h2>
                     <img class="img pages-h1-bottom" src="images/rikyu-01.jpg" alt="チラシ">
                     <h2 class="txt-h2">ショップカード</h2>
@@ -48,15 +59,11 @@
                         <img class="pages-grid-item" src="images/rikyu-04.jpg" alt="クーポン１">
                         <img class="pages-grid-item pages-h1-bottom" src="images/rikyu-05.jpg" alt="クーポン２">
                     </div>
+                    <p class="txt p-line">作成したものは社長及び本部の皆様、お客様から好評をいただき、私が担当・制作したショップカードの配布枚数は
+                        約2週間で200枚を超えました。</p>
                 </div>
             </section>
 
-            <section>
-                <div class="pages-section-bottom">
-                    <p class="txt">作成したものは社長及び本部の皆様、お客様から好評をいただき、私が担当・製作したショップカードの配布枚数は
-                        約2週間で200枚を超えるなどの評価をいただきました。</p>
-                </div>
-            </section>
 		</main>
 		<footer></footer>
 	</body>
