--- a/sample/board.html
+++ b/sample/board.html
@@ -17,37 +17,62 @@
 		<header></header>
 		<main>
             <section id="top">
-                <div class="black-top">
-                    <div class="top-menu">
-                        <p class="mixed txt-top">ティータイム<br/>&emsp;&emsp; Textile</p>
-
-                    </div>
-                    <img class="img-top " src="images/top-18.jpg" alt="ボードのトプ画">
+                <div class=" pages-top-bottom margins">
+                    <img class="img" src="images/top-18.jpg" alt="ボードのトプ画">
+                    <p class="txt-ex top-name-center">---Textile---</p>
+                    <p class="txt-ex top-name-center">ティータイム</p>
+                    <p class="txt top-name-center">◴ 2020/5/6-2020/7/10&emsp;✎ Illustrator 染め　シルクスクリーン</p>
                 </div>
             </section>
 
             <section>
+                <h1 class="mixed mini-box menu topic">&nbsp;PROCESS</h1>
                 <div class=" pages-section-bottom margins">
-                    <p class="txt-ex">「ここちよさ」をテーマにそれぞれのお茶にゆかりのある国のデザインを取り入れたテキスタイルボードです。</p>
-                    <p class="txt">◴ 2020/5/6-2020/7/10</p>
-                    <p class="txt">✎ Illustrator 染め　シルクスクリーン</p>
+                    <div class="txt">
+                        <p class="p-line">卓展2020 テキスタイル卓 COCOCHI</p>
+
+                        <p class="p-line">日常のここちよさをテーマにメンバー毎にテキスタイルボードを制作</p>
+
+                        <p class="p-line">幼少期からお茶が好きであり、家族との団らんの思い出や、お茶を飲む時間が自分のリラックスしている時間であると気付く</p>
+
+                        <p class="p-line txt-ex">ティータイム　× ここちよさ</p>
+
+                        <p class="p-line">幼少期の頃両親が朝のティータイムに飲んでいたお茶、</p>
+
+                        <p class="p-line">母のお気に入りで、受験勉強の際によく私に淹れてくれたお茶、</p>
+
+                        <p class="p-line">そして、お茶の歴史について考える</p>
+
+                        <p class="p-line">高校時代、修学旅行でシンガポールに行った際お土産で買ってきた独特な風味のお茶、</p>
+
+                        <p class="p-line">独特な製造方法ゆえに生産量が少なく、日本であまり見ることができないお茶、</p>
+
+                        <p class="p-line">などお茶と国の関係に興味が湧いてきた</p>
+
+                        <p class="p-line txt-ex">お茶　× 国</p>
+
+                        <p class="p-line">そのお茶がどんな国でどのように発展してきたか、
+                        感じることができるようなテキスタイルボードを作成した</p>
+                    </div>
+                    <img class="board-JPG" src="images/board-sketch.JPG" alt="ラフ">
                 </div>
             </section>
 
             <section>
-                <div class=" pages-section-bottom">
+                <h1 class="mixed mini-box menu topic">&nbsp;WORK</h1>
+                <div class=" pages-section-bottom margins">
                     <img class="bag-jpg" src="images/board-01.jpg" alt="コーヒー">
                     <h2 class="txt">コーヒー×エチオピア</h2>
-                    <p class="txt bag-work">世界初のコーヒが生まれたという内容のカルディの伝説からヤギの角やコーヒーの実の形を取り入れました。</p>
+                    <p class="txt board-work">世界初のコーヒが生まれたという内容のカルディの伝説からヤギの角やコーヒーの実の形を取り入れた。</p>
                     <img class="bag-jpg" src="images/board-02.jpg" alt="紅茶">
                     <h2 class="txt">紅茶×イギリス</h2>
-                    <p class="txt bag-work">ベルガモットのポップな模様をイギリスのユニオンジャックカラー３色で表現しました。</p>
+                    <p class="txt board-work">ベルガモットのポップな模様をイギリスのユニオンジャックカラー３色で表現した。</p>
                     <img class="bag-jpg" src="images/board-03.jpg" alt="緑茶">
                     <h2 class="txt">緑茶×日本</h2>
-                    <p class="txt bag-work">茶室に使われる畳を敷き詰めた空間を表現しました。１畳１畳に伝統的な和柄三崩しを取り入れました。</p>
+                    <p class="txt board-work">茶室に使われる畳を敷き詰めた空間を表現しました。１畳１畳に伝統的な和柄三崩しを取り入れた。</p>
                     <img class="bag-jpg" src="images/board-04.jpg" alt="ルイボスティー">
                     <h2 class="txt">ルイボスティー×南アフリカ共和国</h2>
-                    <p class="txt bag-work">太陽の照り続ける乾燥地帯で黒人たちの手によって力強く育つルイボスの木など、お茶ができる過程を表現しました。</p>
+                    <p class="txt board-work">太陽の照り続ける乾燥地帯で黒人たちの手によって力強く育つルイボスの木など、お茶ができる過程を表現した。</p>
                 </div>
             </section>
 		</main>
