--- a/sample/bag.html
+++ b/sample/bag.html
@@ -20,7 +20,7 @@
                 <div class=" pages-top-bottom margins">
                     <img class="img" src="images/top-16.jpg" alt="バッグのトプ画">
                     <p class="txt-ex top-name-center">---Textile/Goods---</p>
-                    <p class="txt-ex top-name-center">和みと薫りを持ち運ぶ</p>
+                    <p class="txt-top top-name-center">和みと薫りを持ち運ぶ</p>
                     <p class="txt top-name-center">◴ 2020/7/2-2020/8/20&emsp;✎ Illustrator 染め　シルクスクリーン</p>
                 </div>
 
@@ -55,15 +55,27 @@
                 <h1 class="mixed mini-box menu topic">&nbsp;WORK</h1>
                 <div class=" pages-section-bottom margins">
                     <p class="txt pages-h1-bottom">日本に由来のある３つの香りをモチーフに布の選定からデザイン、染め、模様付け、籠の製作まで行った和風の籠バッグ</p>
-                    <img class="bag-jpg" src="images/bag-15.jpg" alt="檜">
-                    <h2 class="txt-h2">檜</h2>
-                    <p class="txt bag-work">森林を想像させる深い緑色に檜の特徴的な丸い年輪の形とお風呂の水面を連想させる円形の模様のデザイン。薄茶色のカゴとの組み合わせで見た目から森林を感じさせる。</p>
-                    <img class="bag-jpg" src="images/bag-16.jpg" alt="竜涎香">
-                    <h2 class="txt-h2">竜涎香</h2>
-                    <p class="txt bag-work">上質な竜涎香の色味である琥珀色を背景に海を泳ぐマッコウクジラと竜涎香の歪な形の模様のデザイン。竜涎香とはマッコウクジラの腸内でできる塊状の香料のことである。</p>
-                    <img class="bag-jpg" src="images/bag-17.jpg" alt="金木犀">
-                    <h2 class="txt-h2">金木犀</h2>
-                    <p class="txt bag-work">幾何学的な形の花を前面に出した模様のデザイン。カゴとの組み合わせで金木犀の鮮やかなオレンジ色の花と緑力しい葉を表現している。</p>
+                    <div class="pages-grid">
+                        <img class="bag-jpg pages-grid-item" src="images/bag-15.jpg" alt="檜">
+                        <div class="pages-grid-item">
+                            <h2 class="txt-h2 pages-center">---檜---</h2>
+                            <p class="txt bag-work">森林を想像させる深い緑色に檜の特徴的な丸い年輪の形とお風呂の水面を連想させる円形の模様のデザイン。薄茶色のカゴとの組み合わせで見た目から森林を感じさせる。</p>
+                        </div>
+                    </div>
+                    <div class="pages-grid">
+                        <img class="bag-jpg pages-grid-item" src="images/bag-16.jpg" alt="竜涎香">
+                        <div class="pages-grid-item">
+                            <h2 class="txt-h2 pages-center">---竜涎香---</h2>
+                            <p class="txt bag-work">上質な竜涎香の色味である琥珀色を背景に海を泳ぐマッコウクジラと竜涎香の歪な形の模様のデザイン。竜涎香とはマッコウクジラの腸内でできる塊状の香料のことである。</p>
+                        </div>
+                    </div>
+                    <div class="pages-grid">
+                        <img class="bag-jpg pages-grid-item" src="images/bag-17.jpg" alt="金木犀">
+                        <div class="pages-grid-item">
+                            <h2 class="txt-h2 pages-center">---金木犀---</h2>
+                            <p class="txt bag-work">幾何学的な形の花を前面に出した模様のデザイン。カゴとの組み合わせで金木犀の鮮やかなオレンジ色の花と緑力しい葉を表現している。</p>
+                        </div>
+                    </div>
                 </div>
             </section>
 
