--- a/sample/board.html
+++ b/sample/board.html
@@ -20,7 +20,7 @@
                 <div class=" pages-top-bottom margins">
                     <img class="img" src="images/top-18.jpg" alt="ボードのトプ画">
                     <p class="txt-ex top-name-center">---Textile---</p>
-                    <p class="txt-ex top-name-center">ティータイム</p>
+                    <p class="txt-top top-name-center">ティータイム</p>
                     <p class="txt top-name-center">◴ 2020/5/6-2020/7/10&emsp;✎ Illustrator 染め　シルクスクリーン</p>
                 </div>
             </section>
@@ -61,18 +61,37 @@
             <section>
                 <h1 class="mixed mini-box menu topic">&nbsp;WORK</h1>
                 <div class=" pages-section-bottom margins">
-                    <img class="bag-jpg" src="images/board-01.jpg" alt="コーヒー">
-                    <h2 class="txt">コーヒー×エチオピア</h2>
-                    <p class="txt board-work">世界初のコーヒが生まれたという内容のカルディの伝説からヤギの角やコーヒーの実の形を取り入れた。</p>
-                    <img class="bag-jpg" src="images/board-02.jpg" alt="紅茶">
-                    <h2 class="txt">紅茶×イギリス</h2>
-                    <p class="txt board-work">ベルガモットのポップな模様をイギリスのユニオンジャックカラー３色で表現した。</p>
-                    <img class="bag-jpg" src="images/board-03.jpg" alt="緑茶">
-                    <h2 class="txt">緑茶×日本</h2>
-                    <p class="txt board-work">茶室に使われる畳を敷き詰めた空間を表現しました。１畳１畳に伝統的な和柄三崩しを取り入れた。</p>
-                    <img class="bag-jpg" src="images/board-04.jpg" alt="ルイボスティー">
-                    <h2 class="txt">ルイボスティー×南アフリカ共和国</h2>
-                    <p class="txt board-work">太陽の照り続ける乾燥地帯で黒人たちの手によって力強く育つルイボスの木など、お茶ができる過程を表現した。</p>
+                    <div class="pages-grid">
+                        <img class="bag-jpg pages-grid-item" src="images/board-01.jpg" alt="コーヒー">
+                        <div class="pages-grid-item">
+                            <h2 class="txt-h2 pages-center">---コーヒー×エチオピア---</h2>
+                            <p class="txt board-work">世界初のコーヒが生まれたという内容のカルディの伝説からヤギの角やコーヒーの実の形を取り入れた。</p>
+                        </div>
+                    </div>
+
+                    <div class="pages-grid">
+                        <img class="bag-jpg pages-grid-item" src="images/board-02.jpg" alt="紅茶">
+                        <div class="pages-grid-item">
+                            <h2 class="txt-h2 pages-center">---紅茶×イギリス---</h2>
+                            <p class="txt board-work">ベルガモットのポップな模様をイギリスのユニオンジャックカラー３色で表現した。</p>
+                        </div>
+                    </div>
+
+                    <div class="pages-grid">
+                        <img class="bag-jpg pages-grid-item" src="images/board-03.jpg" alt="緑茶">
+                        <div class="pages-grid-item">
+                            <h2 class="txt-h2 pages-center">---緑茶×日本---</h2>
+                            <p class="txt board-work">茶室に使われる畳を敷き詰めた空間を表現しました。１畳１畳に伝統的な和柄三崩しを取り入れた。</p>
+                        </div>
+                    </div>
+
+                    <div class="pages-grid">
+                        <img class="bag-jpg pages-grid-item" src="images/board-04.jpg" alt="ルイボスティー">
+                        <div class="pages-grid-item">
+                            <h2 class="txt-h2 pages-center">---ルイボスティー×南アフリカ共和国---</h2>
+                            <p class="txt board-work">太陽の照り続ける乾燥地帯で黒人たちの手によって力強く育つルイボスの木など、お茶ができる過程を表現した。</p>
+                        </div>
+                    </div>
                 </div>
             </section>
 		</main>
