--- a/sample/higashiyama.html
+++ b/sample/higashiyama.html
@@ -20,27 +20,10 @@
                 <div class=" pages-top-bottom margins">
                     <img class="img" src="images/top-14.jpg" alt="東山のトプ画">
                     <p class="txt-ex top-name-center">---Sign plan---</p>
-                    <p class="txt-ex top-name-center">植物のようせいと学ぶ東山植物園</p>
+                    <p class="txt-top top-name-center">植物のようせいと学ぶ東山植物園</p>
                     <p class="txt top-name-center">◴ 2021/4/21-2021/6/4&emsp;✎ Illustrator Photoshop AfterEffect</p>
                 </div>
             </section>
-            <!-- <section id="top">
-                <div class="black-top">
-                    <div class="top-menu">
-                        <p class="mixed txt-top">東山植物園サイン計画<br/>&emsp;&emsp;&emsp;&emsp;&emsp; Sign plan</p>
-
-                    </div>
-                    <img class="img-top " src="images/top-14.jpg" alt="東山のトプ画">
-                </div>
-            </section> -->
-
-            <!-- <section>
-                <div class=" pages-section-bottom margins">
-                    <p class="txt-ex">東山植物園の現状問題を解決するサイン計画です。<br/>【ペアワーク】</p>
-                    <p class="txt">◴ 2021/4/21-2021/6/4</p>
-                    <p class="txt">✎ Illustrator Photoshop AfterEffect</p>
-                </div>
-            </section> -->
 
             <section>
                 <h1 class="mixed mini-box menu topic">&nbsp;PROCESS</h1>
