--- a/sample/rikyu.html
+++ b/sample/rikyu.html
@@ -20,28 +20,11 @@
                 <div class=" pages-top-bottom margins">
                     <img class="img" src="images/top-17.jpg" alt="りきゅうのトプ画">
                     <p class="txt-ex top-name-center">---Advertisement---</p>
-                    <p class="txt-ex top-name-center">新店舗オープン宣伝広告</p>
+                    <p class="txt-top top-name-center">新店舗オープン宣伝広告</p>
                     <p class="txt top-name-center">◴ 2020/1/28-2020/3/5&emsp;✎ Illustrator</p>
                 </div>
             </section>
 
-            <!-- <section id="top">
-                <div class="black-top">
-                    <div class="top-menu">
-                        <p class="mixed txt-top">東京下町もんじゃ屋りきゅう津島店<br/>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; Advertisement</p>
-
-                    </div>
-                    <img class="img-top " src="images/top-17.jpg" alt="りきゅうのトプ画">
-                </div>
-            </section> -->
-
-            <!-- <section>
-                <div class=" pages-section-bottom margins">
-                    <p class="txt-ex"></p>
-                    <p class="txt">◴ 2020/1/28-2020/3/5</p>
-                    <p class="txt">✎ Illustrator</p>
-                </div>
-            </section> -->
 
             <section>
                 <h1 class="mixed mini-box menu topic">&nbsp;WORK</h1>
