--- a/sample/hasami.html
+++ b/sample/hasami.html
@@ -20,27 +20,10 @@
                 <div class=" pages-top-bottom margins">
                     <img class="img" src="images/top-20.jpg" alt="はさみのトプ画">
                     <p class="txt-ex top-name-center">---Programming---</p>
-                    <p class="txt-ex top-name-center">対戦型はさみ将棋</p>
+                    <p class="txt-top top-name-center">対戦型はさみ将棋</p>
                     <p class="txt top-name-center">◴ 2020/6/4-2020/8/27&emsp;✎ Python Illustrator</p>
                 </div>
             </section>
-            <!-- <section id="top">
-                <div class="black-top">
-                    <div class="top-menu">
-                        <p class="mixed txt-top">対戦型はさみ将棋<br/>&emsp; Programming</p>
-
-                    </div>
-                    <img class="img-top " src="images/top-20.jpg" alt="はさみ将棋のトプ画">
-                </div>
-            </section>
-
-            <section>
-                <div class=" pages-section-bottom margins">
-                    <p class="txt-ex"></p>
-                    <p class="txt">◴ 2020/6/4-2020/8/27</p>
-                    <p class="txt">✎ Python Illustrator</p>
-                </div>
-            </section> -->
 
             <section>
                 <h1 class="mixed mini-box menu topic">&nbsp;WORK</h1>
