--- a/sample/index.html
+++ b/sample/index.html
@@ -68,7 +68,7 @@
 				<h2>齋藤小薫　SAITO KOYUKI</h2>
 				<p>2019.3  宮城県立仙台二華高等学校卒</p>
 				<p>2019.4  名古屋市立大学　芸術工学部　情報環境デザイン学科</p>
-				<p>カラーコーディネーター検定スタンダード</p>
+				<p>カラーコーディネーター検定アドバンス</p>
 				<p>Mail Address: saito.koyuki.2000@gmail.com</p>
 			</section>
 		</main>
